Added more Java 8 Interview questions with skip and limit